--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,15 +1,15 @@
-entrypoints==0.3
-fastapi==0.70.0
-Flask==2.0.3
-Flask-Cors==4.0.1
-httpcore==1.0.2
-httpx==0.25.2
-packaging==21.3
-pyOpenSSL==21.0.0
-python-dotenv==0.19.2
-SQLAlchemy==1.4.32
-websocket-client==1.2.3
-werkzeug==2.0.3
-PyMySQL==1.1.0
-Cython==0.29.33
-scikit-learn==1.0.2
+entrypoints
+fastapi
+Flask
+Flask-Cors
+httpcore
+httpx
+packaging
+pyOpenSSL
+python-dotenv
+SQLAlchemy
+websocket-client
+werkzeug
+PyMySQL
+Cython
+scikit-learn
